# maligner

./: .gitattributes  .gitignore  README.md  environment.yml  mypy.ini  pyproject.toml  reinstall.bat  requirements.txt
.github/workflows/: check.yml  pypy-publish.yml
malign/: __main__.py  form.ui  form.ui.autosave  form_ui.py  mainwindow-creator.py  mainwindow.py  molEditWidget.py  molViewWidget.py  ptable_widget.py  rdEditor.py  substructure_selector.py
maligner/: __init__.py  __main__.py  aligner.py  icons.py  mainwindow.py  molEditWidget.py  mtypes.py  substructure_selector.py
maligner/translations/: pt_BR.qm  pt_BR.ts
maligner/widgets/: MolGridView.py  molEditWidget.py  molViewWidget.py  substructure_selector.py
molecules/: any1.mol  any2.mol  any3.mol
molecules/chemsketch_3d/: README.md  any1.mol  any1_aligned.mol  any2.mol  any2_aligned.mol  any3.mol  any3_aligned.mol
molecules/chemsketch_3d_heteroatom/: README.md  any1.mol  any2.mol  any3.mol
