[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maligner"
dynamic = ["version"]
description = "An Open-Source Molecular Alignment Tool"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Heliton Martins Reis Filho", email = "helitonmrf@gmail.com" },
]
dependencies = ["numpy", "pandas", "PySide6", "rdkit", "datamol"]

[project.optional-dependencies]
dev = ["hatch", "yapf"]

[project.gui-scripts]
maligner = "maligner.mainwindow:launch"

[project.urls]
Homepage = "https://github.com/hellmrf/maligner"

[tool.hatch.version]
path = "maligner/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/maligner"]

[tool.hatch.build.targets.wheel]
packages = ["/maligner"]

[tool.yapf]
based_on_style = "google"
column_limit = 100
indent_width = 4
