[project]
name = "maligner"
version = "0.1.0"
description = "An Open-Source Molecular Alignment Tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Heliton Martins", email = "helitonmrf@gmail.com" }]
urls = { Homepage = "https://github.com/hellmrf/maligner" }
gui-scripts = { gui = "maligner:launch" }

## Dependencies

requires-python = ">=3.12"
dependencies = [
    "datamol>=0.12.5",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyside6>=6.8.1",
    "rdkit>=2024.3.6",
]

[dependency-groups]
dev = []

# Build system

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/maligner"]

[tool.hatch.build.targets.wheel]
packages = ["maligner"]

# Other tools
