[project]
name = "maligner"
version = "0.0.2"
description = "An Open-Source Molecular Alignment Tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Heliton Martins", email = "helitonmrf@gmail.com" }]
urls = { Homepage = "https://github.com/hellmrf/maligner" }
gui-scripts = { gui = "maligner:launch" }

## Dependencies

requires-python = ">=3.12"
dependencies = [
    "datamol>=0.12.5",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyside6>=6.8.1",
    "rdkit>=2024.3.6",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126",
    "ruff>=0.8.2",
]

# Build system

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/maligner"]

[tool.hatch.build.targets.wheel]
packages = ["maligner"]

# Other tools

## mypy

[tool.mypy]
packages = ["maligner"]
exclude = [ "molecules/*"]

[[tool.mypy.overrides]]
module = "datamol"
ignore_missing_imports = true

## ruff
[tool.ruff]
exclude = ["molecules/*"]